// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationEdit expect to render a Form 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotificationEdit
    apps={Array []}
    createEndpoint={[MockFunction]}
    fetchApps={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    fetchEndpoint={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    fetchFilters={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    filters={Array []}
    match={
      Object {
        "params": Object {
          "endpointId": "1",
        },
      }
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    updateEndpoint={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <LoadingState
        placeholder={
          <Skeleton
            size="sm"
          />
        }
      >
        <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          className="pf-c-form"
          disabled={false}
          formData={Object {}}
          liveValidate={false}
          noHtml5Validate={false}
          noValidate={false}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            }
          }
          uiSchema={
            Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            }
          }
        >
          <FilterList
            apps={Array []}
            selectedAppEventTypes={
              Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              }
            }
          />
          <div>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              type="submit"
              variant="primary"
            >
              Submit
            </Button>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </Button>
          </div>
        </Form>
      </LoadingState>,
      "title": "Edit Notification",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          className="pf-c-form"
          disabled={false}
          formData={Object {}}
          liveValidate={false}
          noHtml5Validate={false}
          noValidate={false}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            }
          }
          uiSchema={
            Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            }
          }
        >
          <FilterList
            apps={Array []}
            selectedAppEventTypes={
              Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              }
            }
          />
          <div>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              type="submit"
              variant="primary"
            >
              Submit
            </Button>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </Button>
          </div>
        </Form>,
        "loading": undefined,
        "placeholder": <Skeleton
          size="sm"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "ErrorList": [Function],
          "FieldTemplate": [Function],
          "children": Array [
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />,
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>,
          ],
          "className": "pf-c-form",
          "disabled": false,
          "formData": Object {},
          "liveValidate": false,
          "noHtml5Validate": false,
          "noValidate": false,
          "onSubmit": [Function],
          "safeRenderCompletion": false,
          "schema": Object {
            "properties": Object {
              "active": Object {
                "default": true,
                "title": "Active",
                "type": "boolean",
              },
              "name": Object {
                "title": "Name",
                "type": "string",
              },
              "url": Object {
                "title": "URL",
                "type": "string",
              },
            },
            "required": Array [
              "name",
              "url",
            ],
            "title": "Edit Notifications",
            "type": "object",
          },
          "uiSchema": Object {
            "name": Object {
              "ui:placeholder": "New notification endpoint name",
            },
            "url": Object {
              "ui:placeholder": "https://...",
            },
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "apps": Array [],
              "selectedAppEventTypes": Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              },
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  type="submit"
                  variant="primary"
                >
                  Submit
                </Button>,
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "aria-label": null,
                  "children": "Submit",
                  "className": "",
                  "component": "button",
                  "isActive": false,
                  "isBlock": false,
                  "isDisabled": false,
                  "isFocus": false,
                  "isHover": false,
                  "type": "submit",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": "Submit",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "aria-label": null,
                  "children": "Cancel",
                  "className": "",
                  "component": "button",
                  "isActive": false,
                  "isBlock": false,
                  "isDisabled": false,
                  "isFocus": false,
                  "isHover": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Cancel",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <LoadingState
          placeholder={
            <Skeleton
              size="sm"
            />
          }
        >
          <Form
            ErrorList={[Function]}
            FieldTemplate={[Function]}
            className="pf-c-form"
            disabled={false}
            formData={Object {}}
            liveValidate={false}
            noHtml5Validate={false}
            noValidate={false}
            onSubmit={[Function]}
            safeRenderCompletion={false}
            schema={
              Object {
                "properties": Object {
                  "active": Object {
                    "default": true,
                    "title": "Active",
                    "type": "boolean",
                  },
                  "name": Object {
                    "title": "Name",
                    "type": "string",
                  },
                  "url": Object {
                    "title": "URL",
                    "type": "string",
                  },
                },
                "required": Array [
                  "name",
                  "url",
                ],
                "title": "Edit Notifications",
                "type": "object",
              }
            }
            uiSchema={
              Object {
                "name": Object {
                  "ui:placeholder": "New notification endpoint name",
                },
                "url": Object {
                  "ui:placeholder": "https://...",
                },
              }
            }
          >
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>
          </Form>
        </LoadingState>,
        "title": "Edit Notification",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Form
            ErrorList={[Function]}
            FieldTemplate={[Function]}
            className="pf-c-form"
            disabled={false}
            formData={Object {}}
            liveValidate={false}
            noHtml5Validate={false}
            noValidate={false}
            onSubmit={[Function]}
            safeRenderCompletion={false}
            schema={
              Object {
                "properties": Object {
                  "active": Object {
                    "default": true,
                    "title": "Active",
                    "type": "boolean",
                  },
                  "name": Object {
                    "title": "Name",
                    "type": "string",
                  },
                  "url": Object {
                    "title": "URL",
                    "type": "string",
                  },
                },
                "required": Array [
                  "name",
                  "url",
                ],
                "title": "Edit Notifications",
                "type": "object",
              }
            }
            uiSchema={
              Object {
                "name": Object {
                  "ui:placeholder": "New notification endpoint name",
                },
                "url": Object {
                  "ui:placeholder": "https://...",
                },
              }
            }
          >
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>
          </Form>,
          "loading": undefined,
          "placeholder": <Skeleton
            size="sm"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "ErrorList": [Function],
            "FieldTemplate": [Function],
            "children": Array [
              <FilterList
                apps={Array []}
                selectedAppEventTypes={
                  Object {
                    "appIds": Array [],
                    "eventTypeIds": Array [],
                  }
                }
              />,
              <div>
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  type="submit"
                  variant="primary"
                >
                  Submit
                </Button>
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Button>
              </div>,
            ],
            "className": "pf-c-form",
            "disabled": false,
            "formData": Object {},
            "liveValidate": false,
            "noHtml5Validate": false,
            "noValidate": false,
            "onSubmit": [Function],
            "safeRenderCompletion": false,
            "schema": Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            },
            "uiSchema": Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "apps": Array [],
                "selectedAppEventTypes": Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                },
              },
              "ref": Object {
                "current": null,
              },
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Button
                    aria-label={null}
                    className=""
                    component="button"
                    isActive={false}
                    isBlock={false}
                    isDisabled={false}
                    isFocus={false}
                    isHover={false}
                    type="submit"
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    aria-label={null}
                    className=""
                    component="button"
                    isActive={false}
                    isBlock={false}
                    isDisabled={false}
                    isFocus={false}
                    isHover={false}
                    onClick={[Function]}
                    type="button"
                    variant="secondary"
                  >
                    Cancel
                  </Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "aria-label": null,
                    "children": "Submit",
                    "className": "",
                    "component": "button",
                    "isActive": false,
                    "isBlock": false,
                    "isDisabled": false,
                    "isFocus": false,
                    "isHover": false,
                    "type": "submit",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": "Submit",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "aria-label": null,
                    "children": "Cancel",
                    "className": "",
                    "component": "button",
                    "isActive": false,
                    "isBlock": false,
                    "isDisabled": false,
                    "isFocus": false,
                    "isHover": false,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "secondary",
                  },
                  "ref": null,
                  "rendered": "Cancel",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`NotificationEdit takes an endpoint 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotificationEdit
    apps={Array []}
    createEndpoint={[MockFunction]}
    endpoint={
      Object {
        "active": false,
        "filtersCount": 4,
        "id": 3,
        "name": "TEST Endpoint #3",
        "url": "http://endpoint3.com",
      }
    }
    fetchApps={
      [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    fetchEndpoint={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
          Array [
            "1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    fetchFilters={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
          Array [
            "1",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    filters={Array []}
    match={
      Object {
        "params": Object {
          "endpointId": "1",
        },
      }
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    updateEndpoint={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <LoadingState
        placeholder={
          <Skeleton
            size="sm"
          />
        }
      >
        <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          className="pf-c-form"
          disabled={false}
          formData={
            Object {
              "active": false,
              "name": "TEST Endpoint #3",
              "url": "http://endpoint3.com",
            }
          }
          liveValidate={false}
          noHtml5Validate={false}
          noValidate={false}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            }
          }
          uiSchema={
            Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            }
          }
        >
          <FilterList
            apps={Array []}
            selectedAppEventTypes={
              Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              }
            }
          />
          <div>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              type="submit"
              variant="primary"
            >
              Submit
            </Button>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </Button>
          </div>
        </Form>
      </LoadingState>,
      "title": "Edit Notification",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          className="pf-c-form"
          disabled={false}
          formData={
            Object {
              "active": false,
              "name": "TEST Endpoint #3",
              "url": "http://endpoint3.com",
            }
          }
          liveValidate={false}
          noHtml5Validate={false}
          noValidate={false}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            }
          }
          uiSchema={
            Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            }
          }
        >
          <FilterList
            apps={Array []}
            selectedAppEventTypes={
              Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              }
            }
          />
          <div>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              type="submit"
              variant="primary"
            >
              Submit
            </Button>
            <Button
              aria-label={null}
              className=""
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Cancel
            </Button>
          </div>
        </Form>,
        "loading": undefined,
        "placeholder": <Skeleton
          size="sm"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "ErrorList": [Function],
          "FieldTemplate": [Function],
          "children": Array [
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />,
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>,
          ],
          "className": "pf-c-form",
          "disabled": false,
          "formData": Object {
            "active": false,
            "name": "TEST Endpoint #3",
            "url": "http://endpoint3.com",
          },
          "liveValidate": false,
          "noHtml5Validate": false,
          "noValidate": false,
          "onSubmit": [Function],
          "safeRenderCompletion": false,
          "schema": Object {
            "properties": Object {
              "active": Object {
                "default": true,
                "title": "Active",
                "type": "boolean",
              },
              "name": Object {
                "title": "Name",
                "type": "string",
              },
              "url": Object {
                "title": "URL",
                "type": "string",
              },
            },
            "required": Array [
              "name",
              "url",
            ],
            "title": "Edit Notifications",
            "type": "object",
          },
          "uiSchema": Object {
            "name": Object {
              "ui:placeholder": "New notification endpoint name",
            },
            "url": Object {
              "ui:placeholder": "https://...",
            },
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "apps": Array [],
              "selectedAppEventTypes": Object {
                "appIds": Array [],
                "eventTypeIds": Array [],
              },
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  type="submit"
                  variant="primary"
                >
                  Submit
                </Button>,
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "aria-label": null,
                  "children": "Submit",
                  "className": "",
                  "component": "button",
                  "isActive": false,
                  "isBlock": false,
                  "isDisabled": false,
                  "isFocus": false,
                  "isHover": false,
                  "type": "submit",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": "Submit",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "aria-label": null,
                  "children": "Cancel",
                  "className": "",
                  "component": "button",
                  "isActive": false,
                  "isBlock": false,
                  "isDisabled": false,
                  "isFocus": false,
                  "isHover": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Cancel",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <LoadingState
          placeholder={
            <Skeleton
              size="sm"
            />
          }
        >
          <Form
            ErrorList={[Function]}
            FieldTemplate={[Function]}
            className="pf-c-form"
            disabled={false}
            formData={
              Object {
                "active": false,
                "name": "TEST Endpoint #3",
                "url": "http://endpoint3.com",
              }
            }
            liveValidate={false}
            noHtml5Validate={false}
            noValidate={false}
            onSubmit={[Function]}
            safeRenderCompletion={false}
            schema={
              Object {
                "properties": Object {
                  "active": Object {
                    "default": true,
                    "title": "Active",
                    "type": "boolean",
                  },
                  "name": Object {
                    "title": "Name",
                    "type": "string",
                  },
                  "url": Object {
                    "title": "URL",
                    "type": "string",
                  },
                },
                "required": Array [
                  "name",
                  "url",
                ],
                "title": "Edit Notifications",
                "type": "object",
              }
            }
            uiSchema={
              Object {
                "name": Object {
                  "ui:placeholder": "New notification endpoint name",
                },
                "url": Object {
                  "ui:placeholder": "https://...",
                },
              }
            }
          >
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>
          </Form>
        </LoadingState>,
        "title": "Edit Notification",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Form
            ErrorList={[Function]}
            FieldTemplate={[Function]}
            className="pf-c-form"
            disabled={false}
            formData={
              Object {
                "active": false,
                "name": "TEST Endpoint #3",
                "url": "http://endpoint3.com",
              }
            }
            liveValidate={false}
            noHtml5Validate={false}
            noValidate={false}
            onSubmit={[Function]}
            safeRenderCompletion={false}
            schema={
              Object {
                "properties": Object {
                  "active": Object {
                    "default": true,
                    "title": "Active",
                    "type": "boolean",
                  },
                  "name": Object {
                    "title": "Name",
                    "type": "string",
                  },
                  "url": Object {
                    "title": "URL",
                    "type": "string",
                  },
                },
                "required": Array [
                  "name",
                  "url",
                ],
                "title": "Edit Notifications",
                "type": "object",
              }
            }
            uiSchema={
              Object {
                "name": Object {
                  "ui:placeholder": "New notification endpoint name",
                },
                "url": Object {
                  "ui:placeholder": "https://...",
                },
              }
            }
          >
            <FilterList
              apps={Array []}
              selectedAppEventTypes={
                Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                }
              }
            />
            <div>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                type="submit"
                variant="primary"
              >
                Submit
              </Button>
              <Button
                aria-label={null}
                className=""
                component="button"
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Button>
            </div>
          </Form>,
          "loading": undefined,
          "placeholder": <Skeleton
            size="sm"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "ErrorList": [Function],
            "FieldTemplate": [Function],
            "children": Array [
              <FilterList
                apps={Array []}
                selectedAppEventTypes={
                  Object {
                    "appIds": Array [],
                    "eventTypeIds": Array [],
                  }
                }
              />,
              <div>
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  type="submit"
                  variant="primary"
                >
                  Submit
                </Button>
                <Button
                  aria-label={null}
                  className=""
                  component="button"
                  isActive={false}
                  isBlock={false}
                  isDisabled={false}
                  isFocus={false}
                  isHover={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Button>
              </div>,
            ],
            "className": "pf-c-form",
            "disabled": false,
            "formData": Object {
              "active": false,
              "name": "TEST Endpoint #3",
              "url": "http://endpoint3.com",
            },
            "liveValidate": false,
            "noHtml5Validate": false,
            "noValidate": false,
            "onSubmit": [Function],
            "safeRenderCompletion": false,
            "schema": Object {
              "properties": Object {
                "active": Object {
                  "default": true,
                  "title": "Active",
                  "type": "boolean",
                },
                "name": Object {
                  "title": "Name",
                  "type": "string",
                },
                "url": Object {
                  "title": "URL",
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "url",
              ],
              "title": "Edit Notifications",
              "type": "object",
            },
            "uiSchema": Object {
              "name": Object {
                "ui:placeholder": "New notification endpoint name",
              },
              "url": Object {
                "ui:placeholder": "https://...",
              },
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "apps": Array [],
                "selectedAppEventTypes": Object {
                  "appIds": Array [],
                  "eventTypeIds": Array [],
                },
              },
              "ref": Object {
                "current": null,
              },
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Button
                    aria-label={null}
                    className=""
                    component="button"
                    isActive={false}
                    isBlock={false}
                    isDisabled={false}
                    isFocus={false}
                    isHover={false}
                    type="submit"
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    aria-label={null}
                    className=""
                    component="button"
                    isActive={false}
                    isBlock={false}
                    isDisabled={false}
                    isFocus={false}
                    isHover={false}
                    onClick={[Function]}
                    type="button"
                    variant="secondary"
                  >
                    Cancel
                  </Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "aria-label": null,
                    "children": "Submit",
                    "className": "",
                    "component": "button",
                    "isActive": false,
                    "isBlock": false,
                    "isDisabled": false,
                    "isFocus": false,
                    "isHover": false,
                    "type": "submit",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": "Submit",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "aria-label": null,
                    "children": "Cancel",
                    "className": "",
                    "component": "button",
                    "isActive": false,
                    "isBlock": false,
                    "isDisabled": false,
                    "isFocus": false,
                    "isHover": false,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "secondary",
                  },
                  "ref": null,
                  "rendered": "Cancel",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
